infra/k8s/elastic-search-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.11.2
          ports:
            - containerPort: 9200
              name: client
            - containerPort: 9300
              name: nodes
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  ports:
    - port: 9200
      name: client
    - port: 9300
      name: nodes
  selector:
    app: elasticsearch
