infra/k8s/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:7.11.2
          ports:
            - containerPort: 5601
              name: webinterface
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-cluster-ip-service
  labels:
    service: kibana
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
