infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pizza-express.com
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: pizza-express-cluster-ip-service
                port:
                  number: 3000
    - host: pizza-kibana.com
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: kibana-cluster-ip-service
                port:
                  number: 5601
